Improve the design of the home-page

--- a/College-front-end/src/app/home-page/home-page.component.html
+++ b/College-front-end/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <body>
   <div class="image-container">
-    <h1>Welcome to College</h1>
+    <div><h1>Welcome to NB College</h1></div>
     <img class= "image-container img" src="mainbcg.jpg" alt="Background Image">
   </div>
 </body>
