--- a/College-front-end/src/app/home-page/home-page.component.css
+++ b/College-front-end/src/app/home-page/home-page.component.css
@@ -12,15 +12,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: -1;
  }
-
-
-h1, h2, h3, h4, h5, h6 {
-        font-size: 32px;
-        font-weight: bold;
-        color: #333;
-        margin: 20px 0;  
-  }
  body {
     display: flex;
     justify-content: center;
@@ -28,13 +21,19 @@ h1, h2, h3, h4, h5, h6 {
     height: 100vh;
     margin: 0;
     padding: 0;
+    background-image: url("images/mainbcg.jpg");
+    background-repeat: no-repeat;
   }
-  
+
+
 h1 {
-    font-size: 90px;
+    font-size: 60px;
     font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #2c7cbe;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: #0f0f0f;
+    position: absolute;
+    top: 65px;
+    right: 15px;
   }
   
   
