--- a/College-front-end/src/app/register-page/register-page.component.html
+++ b/College-front-end/src/app/register-page/register-page.component.html
@@ -6,18 +6,18 @@
     <form>
       <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name"#name name="name" required>
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email"#email name="email" required>
       </div>
       <div class="form-group">
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password"#password name="password" required>
       </div>
       <div>
-        <button class = "button">Sign up</button>
+        <button class = "button" (click) = "getVal(name.value,email.value,password.value)">Sign up</button>
       </div>
     </form>
   </div>
