Add connection to profiles

--- a/College-front-end/src/app/register-page/register-page.component.html
+++ b/College-front-end/src/app/register-page/register-page.component.html
@@ -17,9 +17,10 @@
         <input type="password" id="password"#password name="password" required>
       </div>
       <div>
-        <button class = "button" (click) = "getVal(name.value,email.value,password.value)">Sign up</button>
+        <button class = "button" >Sign up</button>
       </div>
     </form>
   </div>
 </body>
+<router-outlet></router-outlet>
 
