--- a/College-front-end/src/app/app.component.html
+++ b/College-front-end/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="navbar">
-  <div class="container-fluid">    <a href="/home-page-component">College</a>
+  <div class="container-fluid">    
+    <a href="/home-page-component">College</a>
+    <a href="/course-list-page-component">Courses</a>
+    <a href="/register-page-component">Register</a>   
+     <a href="/faculty-list-page-component">Faculties</a>
+     <a href="/department-list-page-component">Departments</a>
+
   </div>
 
 <router-outlet></router-outlet>
