--- a/College-front-end/src/app/home-page/home-page.component.css
+++ b/College-front-end/src/app/home-page/home-page.component.css
@@ -1,7 +1,6 @@
-
 .image-container {
     position: fixed;
-    top: 0;
+    top: 60px; /* Adjust the value as needed to create space for the navbar */
     left: 0;
     width: 100%;
     height: 100%;
@@ -12,8 +11,16 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
  }
+
+
+h1, h2, h3, h4, h5, h6 {
+        font-size: 32px;
+        font-weight: bold;
+        color: #333;
+        margin: 20px 0;  
+  }
+
  body {
     display: flex;
     justify-content: center;
@@ -21,19 +28,20 @@
     height: 100vh;
     margin: 0;
     padding: 0;
+    margin-top: 50px;
     background-image: url("images/mainbcg.jpg");
+    background-size: 100%;
     background-repeat: no-repeat;
   }
-
-
+  
+  
 h1 {
-    font-size: 60px;
+    font-size: 90px;
+    margin-top: 100px;
+    margin-left: 60px;
     font-weight: bold;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color: #0f0f0f;
-    position: absolute;
-    top: 65px;
-    right: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #2c7cbe;
   }
   
   
