--- a/College-front-end/src/app/home-page/home-page.component.html
+++ b/College-front-end/src/app/home-page/home-page.component.html
@@ -1,7 +1,6 @@
 <body>
   <div class="image-container">
-    <div><h1>Welcome to NB College</h1></div>
-    <img class= "image-container img" src="mainbcg.jpg" alt="Background Image">
+    <h1>Welcome to College</h1>
   </div>
 </body>
 
