--- a/College-front-end/src/app/register-page/register-page.component.html
+++ b/College-front-end/src/app/register-page/register-page.component.html
@@ -1,6 +1,6 @@
 
 <body>
-    <div class="image-container"><img class= "image-container img" src="mountainbg.jpg" alt="Background Image"></div>
+    <!-- <div class="image-container"><img class= "image-container img" src="mountainbg.jpg" alt="Background Image"></div> -->
   <div class="register-form">
     <h1>Sign up</h1>
     <form>
@@ -17,10 +17,9 @@
         <input type="password" id="password"#password name="password" required>
       </div>
       <div>
-        <button class = "button" >Sign up</button>
+        <button class = "button" (click) = "getVal(name.value,email.value,password.value)">Sign up</button>
       </div>
     </form>
   </div>
 </body>
 <router-outlet></router-outlet>
-
