--- a/College-front-end/src/app/register-page/register-page.component.css
+++ b/College-front-end/src/app/register-page/register-page.component.css
@@ -18,6 +18,13 @@
   .register-form .form-group {
     margin-bottom: 10px;
   }
+
+  .role{
+    margin-bottom: 10px;
+  }
+
+
+
   
   .register-form label {
     font-weight: bold;
@@ -131,13 +138,7 @@ body {
     height: 100%;
     overflow: hidden;
   }
-  
-/* .image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
- } */
+
   
   
   
