--- a/College-front-end/src/app/register-page/register-page.component.html
+++ b/College-front-end/src/app/register-page/register-page.component.html
@@ -1,9 +1,16 @@
 
 <body>
-    <!-- <div class="image-container"><img class= "image-container img" src="mountainbg.jpg" alt="Background Image"></div> -->
   <div class="register-form">
     <h1>Sign up</h1>
     <form>
+      <div class = "role">
+        <label id="role-label">Choose a role:</label>
+       <br><br>
+        <select name="role" #role id="role">
+          <option value="student">Student</option>
+          <option value="teacher">Teacher</option>
+        </select>
+      </div>
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" id="name"#name name="name" required>
@@ -17,7 +24,7 @@
         <input type="password" id="password"#password name="password" required>
       </div>
       <div>
-        <button class = "button" (click) = "getVal(name.value,email.value,password.value)">Sign up</button>
+        <button class = "button" (click) = "getVal(role.value,name.value,email.value,password.value)">Sign up</button>
       </div>
     </form>
   </div>
