Added logic for faculties

--- a/College-front-end/src/app/app.component.html
+++ b/College-front-end/src/app/app.component.html
@@ -5,6 +5,7 @@
     <a href="/register-page-component">Register</a>   
      <a href="/faculty-list-page-component">Faculties</a>
      <a href="/department-list-page-component">Departments</a>
+     <a href="/log-in-page-component">Log in</a>
 
   </div>
 
