--- a/College-front-end/src/app/register-page/register-page.component.css
+++ b/College-front-end/src/app/register-page/register-page.component.css
@@ -100,9 +100,10 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    /* background-image: url("images/mountainbg.jpg"); */
+    background-image: url("images/mountainbg.jpg");
     background-repeat: no-repeat;
   }
+
   input[type="text"],
   input[type="email"],
   input[type="password"]
