Add front end and back end logic

--- a/College-front-end/src/app/register-page/register-page.component.css
+++ b/College-front-end/src/app/register-page/register-page.component.css
@@ -100,7 +100,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    /* background-image: url("images/mountainbg.jpg"); */
+    background-image: url("images/mountainbg.jpg"); 
     background-repeat: no-repeat;
   }
   input[type="text"],
@@ -138,8 +138,6 @@ body {
     height: 100%;
     overflow: hidden;
   }
-
-  
   
   
   
