--- a/College-front-end/src/app/log-in-page/log-in-page.component.css
+++ b/College-front-end/src/app/log-in-page/log-in-page.component.css
@@ -131,6 +131,19 @@ body {
     object-fit: cover;
     z-index: -1;
  }
+
+ .success-message {
+  color: green;
+  font-weight: bold;
+}
+.image-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
   
   
   
