--- a/College-front-end/src/app/log-in-page/log-in-page.component.html
+++ b/College-front-end/src/app/log-in-page/log-in-page.component.html
@@ -5,16 +5,20 @@
     <h1>Log In</h1>
     <form>
       <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email"  #email required>
       </div>
       <div class="form-group">
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" #password required>
       </div>
       <div>
-        <button class = "button">Log in</button>
+        <button class = "button" (click) = "getVal(email.value, password.value)">Log in</button>
       </div>
+      <div *ngIf="isLoggedIn" class="success-message">
+        Login successful!
+      </div>
+      
     </form>
   </div>
 </body>
