Add wotking list for faculty,department and course

--- a/College-front-end/src/app/department-list-page/department-list-page.component.html
+++ b/College-front-end/src/app/department-list-page/department-list-page.component.html
@@ -1,4 +1,5 @@
-<div class="departments">
-    <h1 class="departments-page-container--heading">Департаменти</h1>
-    <app-department-list-item class="departments-page-container--item"></app-department-list-item>
+<div class="department-page-container">
+    <h1 class="department-page-container--heading">Департамент</h1>
+    <app-department-list-item class="department-page-container--item"></app-department-list-item>
 </div>
+
