Change the logic for profile

--- a/College-front-end/src/app/log-in-page/log-in-page.component.html
+++ b/College-front-end/src/app/log-in-page/log-in-page.component.html
@@ -11,7 +11,7 @@
         <input type="password" id="password" name="password" #password required>
       </div>
       <div>
-        <button class = "button" (click) = "getVal(email.value, password.value)">Log in</button>
+        <button class = "button">Log in</button>
       </div>
       
     </form>
