--- a/College-front-end/src/app/log-in-page/log-in-page.component.css
+++ b/College-front-end/src/app/log-in-page/log-in-page.component.css
@@ -18,13 +18,21 @@
   .register-form .form-group {
     margin-bottom: 10px;
   }
+
+  .role{
+    margin-bottom: 10px;
+  }
+
+
+
   
   .register-form label {
     font-weight: bold;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 22px;
     font-weight: bold;
-    color: #ffffff;
+    color: #333;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     background-clip: text;
     -webkit-background-clip: text;
   }
@@ -77,9 +85,8 @@
   }
 
 h1 {
-    color: #fff9f9;
+    color: #333;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
   }
   
 h1:hover {
@@ -96,7 +103,9 @@ body {
     background-image: url("images/mountainbg.jpg");
     background-repeat: no-repeat;
   }
+
   input[type="text"],
+  input[type="email"],
   input[type="password"]
    {
     padding: 8px;
@@ -107,6 +116,12 @@ body {
   }
   
   input[type="text"]:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 4px rgba(0, 123, 255, 0.6);
+  }
+  
+  input[type="email"]:focus {
     outline: none;
     border-color: #007bff;
     box-shadow: 0 0 4px rgba(0, 123, 255, 0.6);
@@ -124,27 +139,6 @@ body {
     height: 100%;
     overflow: hidden;
   }
-  
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
- }
-
- .success-message {
-  color: green;
-  font-weight: bold;
-}
-.image-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-  
   
   
   
