--- a/College-front-end/src/app/register-page/register-page.component.html
+++ b/College-front-end/src/app/register-page/register-page.component.html
@@ -12,8 +12,12 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name"#name name="name" required>
+        <label for="name">First name:</label>
+        <input type="text" id="name"#firstName name="name" required>
+      </div>
+      <div class="form-group">
+        <label for="name">Last name:</label>
+        <input type="text" id="name"#lastName name="name" required>
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
@@ -24,7 +28,7 @@
         <input type="password" id="password"#password name="password" required>
       </div>
       <div>
-        <button class = "button" (click) = "getVal(role.value,name.value,email.value,password.value)">Sign up</button>
+        <button class = "button" (click) = "getVal(role.value,firstName.value,lastName.value,email.value,password.value)">Sign up</button>
       </div>
     </form>
   </div>
