--- a/College-front-end/src/app/courses-list-page/courses-list-page.component.html
+++ b/College-front-end/src/app/courses-list-page/courses-list-page.component.html
@@ -1,5 +1,5 @@
     <div class="courses-page-container">
-        <h1 class="courses-page-container--heading">Курсове</h1>
+        <h1 class="courses-page-container--heading">Courses</h1>
         <app-courses-list-item class="courses-page-container--item"></app-courses-list-item>
     </div>
 
