--- a/College-front-end/src/app/faculty-list-item/faculty-list-item.component.html
+++ b/College-front-end/src/app/faculty-list-item/faculty-list-item.component.html
@@ -4,4 +4,6 @@
             <div class="faculty--name">{{faculty.name}}</div>
         </div>
     </button>
+    <button class = "button" (click)="redirectToEdit()">Edit</button> 
+    <button class = "button-delete">Delete</button> 
 </div>
