--- a/College-front-end/src/app/faculty-list-page/faculty-list-page.component.html
+++ b/College-front-end/src/app/faculty-list-page/faculty-list-page.component.html
@@ -1,5 +1,5 @@
 <div class="faculties-page-container">
-    <h1 class="faculties-page-container--heading">Факултети</h1>
+    <h1 class="faculties-page-container--heading">Faculties</h1>
     <app-faculty-list-item class="faculties-page-container--item"></app-faculty-list-item>
 </div>
 
