--- a/College-front-end/src/app/app.component.css
+++ b/College-front-end/src/app/app.component.css
@@ -21,18 +21,31 @@ ul {
   .navbar li {
     margin: 0 15px;
   }
-  
-  .navbar a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .navbar a:hover {
-    color: #ffcc00;
-  }
 
   a{
     margin-right: 20px;
+    size: 20px;
   }
+
+  .navbar {
+    background-color: #333; /* Set the background color of the navbar */
+    color: #fff; /* Set the text color of the navbar */
+  }
+  
+  .navbar a {
+    color: #fff; /* Set the text color of the navbar links */
+    font-size: 20px;
+    text-decoration: none; /* Remove underline from the links */
+    padding: 10px 15px; /* Add some padding around the links */
+  }
+  
+  .navbar a:hover {
+    background-color: #3aa14b; /* Set the background color of the navbar links on hover */
+  }
+  
+  .container-fluid {
+    max-width: 1200px; /* Set the maximum width of the container */
+    margin: 0 auto; /* Center the container horizontally */
+  }
+  
   
