--- a/College-front-end/src/app/department-list-page/department-list-page.component.html
+++ b/College-front-end/src/app/department-list-page/department-list-page.component.html
@@ -1,5 +1,5 @@
 <div class="department-page-container">
-    <h1 class="department-page-container--heading">Департамент</h1>
+    <h1 class="department-page-container--heading">Departments</h1>
     <app-department-list-item class="department-page-container--item"></app-department-list-item>
 </div>
 
