--- a/College-front-end/src/app/home-page/home-page.component.css
+++ b/College-front-end/src/app/home-page/home-page.component.css
@@ -38,10 +38,17 @@ h2, h3, h4, h5, h6 {
 h1 {
     font-size: 90px;
     margin-top: 100px;
-    margin-left: 60px;
+    position: absolute;
+    top: 0;
+    right: 6px;
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #2c7cbe;
+    color: #3aa14b;
   }
+
+  h1:hover {
+    color: rgb(17, 16, 16);
+  }
+
   
   
