--- a/College-front-end/src/app/department-list-item/department-list-item.component.html
+++ b/College-front-end/src/app/department-list-item/department-list-item.component.html
@@ -4,4 +4,6 @@
             <div class="department--name">{{department.name}}</div>
         </div>
     </button>
+    <button class="button" (click)="edit(department.id)">Edit</button>
+    <button class="button-delete" (click)="delete(department.id)">Delete</button>
 </div>
