--- a/College-front-end/src/app/app.component.html
+++ b/College-front-end/src/app/app.component.html
@@ -5,7 +5,7 @@
      <a href="/faculty-list-page-component">Faculties</a>
      <a href="/department-list-page-component">All Departments</a>
      <a href="/register-page-component">Sign up</a>
-     <a href="/log-in-page-component">Log in</a>
+     <a href="/login-page-component">Log in</a>
   </div>
 
 <router-outlet></router-outlet>
