--- a/College-front-end/src/app/courses-list-item/courses-list-item.component.css
+++ b/College-front-end/src/app/courses-list-item/courses-list-item.component.css
@@ -21,3 +21,64 @@
   .courses--name {
     font-weight: bold;
   } 
+
+  .button {
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    padding-right: 30px; /* Add padding to create space */
+  }
+  
+  .button:hover {
+    background-color: #155818;
+  }
+  
+  .button:active {
+    background-color: #3e8e41;
+  }
+  
+  .button:focus {
+    outline:#4CAF50;
+  }
+
+  .button-delete {
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #8f1d1d;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  .button-delete:hover {
+    background-color: #5c1010;
+  }
+  
+  .button-delete:active {
+    background-color: #5c1010;
+  }
+  
+  .button-delete:focus {
+    outline:#5c1010;
+  }
+  
+.course-item,
+.button,
+.button-delete {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px;
+}
+
+
