--- a/College-front-end/src/app/edit-course/edit-course.component.html
+++ b/College-front-end/src/app/edit-course/edit-course.component.html
@@ -1,14 +1,13 @@
-
 <body>
     <div class="register-form">
-      <h1>Edit Faculty</h1>
+      <h1>Edit Course</h1>
       <form>
         <div class="form-group">
           <label for="name">New name:</label>
           <input type="text" id="name"#newName name="name" required>
         </div>
         <div>
-          <button class = "button" (click) = "edit(newName.value)" >Change</button>
+          <button class = "button" (click) = "edit(newName.value)">Change</button>
         </div>
       </form>
     </div>
