--- a/College-front-end/src/app/faculty-list-page/faculty-list-page.component.html
+++ b/College-front-end/src/app/faculty-list-page/faculty-list-page.component.html
@@ -3,3 +3,4 @@
     <app-faculty-list-item class="faculties-page-container--item"></app-faculty-list-item>
 </div>
 
+<button class="addFaculty" (click) = "addFaculty()">Add Faculty</button>
