--- a/College-front-end/src/app/courses-list-item/courses-list-item.component.html
+++ b/College-front-end/src/app/courses-list-item/courses-list-item.component.html
@@ -1,7 +1,7 @@
 <div class="courses-item-container" *ngFor="let course of courses">
     <button class="courses-item">
         <div class="courses-item--course">
-            <div class="courses--name">{{course.name}}</div>
+            <div class="courses--name" (click) = "getId(course.id)">{{course.name}}</div>
         </div>
     </button>
     <button class="button" (click)="edit(course.id)">Edit</button>
