Add logic for course of grade

--- a/College-front-end/src/app/grade-list-item/grade-list-item.component.html
+++ b/College-front-end/src/app/grade-list-item/grade-list-item.component.html
@@ -2,6 +2,7 @@
     <button class="grade-item">
         <div class="grade-item--grade">
             <div class="grade--name">{{grade.value}}</div>
+            <div class="grade--name">{{grade.course}}</div>
         </div>
     </button>
     <button class="button" (click)="edit(grade.value)">Edit</button>
