Add the table view

--- a/College-front-end/src/app/table/table.component.html
+++ b/College-front-end/src/app/table/table.component.html
@@ -1,1 +1,14 @@
-<p>table works!</p>
+<h1>College Program</h1>
+<table>
+    <thead>
+      <tr>
+        <th>Course</th>
+        <th>Teacher</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    
+    <app-table-item class="table-page-container--item"></app-table-item>
+
+  </table>
+  
