--- a/College-front-end/src/app/table/table.component.html
+++ b/College-front-end/src/app/table/table.component.html
@@ -7,8 +7,11 @@
         <th>Date</th>
       </tr>
     </thead>
-    
+
+<div class="table-page-container">
+    <h1 class="table-page-container--heading"></h1>
     <app-table-item class="table-page-container--item"></app-table-item>
+</div>
 
   </table>
   
